        * unitTests/runit.Matrix.R: using sourceCpp
        * unitTests/runit.misc.R: using sourceCpp
        * unitTests/runit.wrap.R: using sourceCpp
        * unitTests/runit.support.R: using sourceCpp
        * unitTests/runit.rmath.R: using sourceCpp
        * unitTests/runit.RObject.R: using sourceCpp
        * unitTests/runit.stats.R: using sourceCpp
        * unitTests/runit.Vector.R: testing List( int, IntegerVector ) which 
        eventually uses fill__dispatch
        * include/Rcpp/traits/r_type_traits.h: support for as<T&> and as<const T&>
        when T is module exposed
        * include/Rcpp/as.h: as<T&> and as<const T&> when T is module exposed
        * include/Rcpp/module/Module_generated_CppFunction.h: removed the 
        remove_const_and_reference since as<T&> and as<const T&> is supported
        * src/attributes.cpp: automatically populating the environment with 
        the content of a module, rather than make the module object available
        in the environment

2013-07-01  Romain Francois <romain@r-enthusiasts.com>

        * R/unit.test.R: added helper function Rcpp:::unit_test_setup to avoid
        some boiler plate code in unit test files. See e.g. runit.Function.R for
        an example
        * unitTests/runit.as.R: using sourceCpp
        * unitTests/runit.Function.R: using sourceCpp
        * unitTests/runit.DataFrame.R: remove dependency on datasets

2013-06-25  Dirk Eddelbuettel  <edd@debian.org>

	* src/api.cpp: Also test for #defined(__sun) when checking for system
	lacking a valid backtrace() function for stack traces

2013-06-25  Romain Francois <romain@r-enthusiasts.com>

        * DESCRIPTION : devel version 0.10.4.1
        * src/Module.cpp : bring a simplified version of RCPP_FUNCTION 1 .. 4
        * unitTests/runit.macros.R : removed, as RCPP_FUNCTION ... are deprecated
        * include/Rcpp/macros/preprocessor_generated.h : deprecating RCPP_FUNCTION_... macros
        